[gd_scene load_steps=15 format=1]

[ext_resource path="res://Desktop.gd" type="Script" id=1]
[ext_resource path="res://Images/Sprites/WindowSprite.png" type="Texture" id=2]
[ext_resource path="res://Game.tscn" type="PackedScene" id=3]
[ext_resource path="res://Images/Sprites/Data_Portrait.png" type="Texture" id=4]
[ext_resource path="res://Images/Sprites/Data_name.png" type="Texture" id=5]
[ext_resource path="res://Images/Sprites/Pentium_Portrait.png" type="Texture" id=6]
[ext_resource path="res://Images/Sprites/Pentium_name.png" type="Texture" id=7]
[ext_resource path="res://Images/Sprites/Mobo_Portrait.png" type="Texture" id=8]
[ext_resource path="res://Images/Sprites/Mobo_name.png" type="Texture" id=9]
[ext_resource path="res://sounds/dungeonBG.ogg" type="AudioStream" id=10]
[ext_resource path="res://sounds/BattleBG.ogg" type="AudioStream" id=11]
[ext_resource path="res://sounds/winSND.ogg" type="AudioStream" id=12]
[ext_resource path="res://Images/Sprites/Strike_icon.png" type="Texture" id=13]
[ext_resource path="res://clickAbility.gd" type="Script" id=14]

[node name="Desktop" type="Node"]

script/script = ExtResource( 1 )

[node name="GameWindowBorder" type="Sprite" parent="."]

transform/pos = Vector2( 491.288, 345.698 )
transform/scale = Vector2( 3.0659, 3.45177 )
texture = ExtResource( 2 )

[node name="GameWindow" type="Panel" parent="."]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 75.0
margin/right = 971.0
margin/bottom = 675.0

[node name="Viewport" type="Viewport" parent="GameWindow"]

rect = Rect2( 0, 0, 960, 600 )
own_world = false
world = null
transparent_bg = false
render_target/enabled = false
render_target/v_flip = false
render_target/clear_on_new_frame = true
render_target/filter = false
render_target/gen_mipmaps = false
render_target/update_mode = 2
audio_listener/enable_2d = false
audio_listener/enable_3d = false
physics/object_picking = true
gui/disable_input = false

[node name="Game" parent="GameWindow/Viewport" instance=ExtResource( 3 )]

[node name="PortaitWindowBorder" type="Sprite" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 321.182, 813.4 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Background" type="Polygon2D" parent="PortaitWindowBorder"]

visibility/behind_parent = true
polygon = Vector2Array( -158.452, -89.4028, -158.057, -12.0277, 157.198, -10.061, 157.736, -87.494 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Data" type="Sprite" parent="PortaitWindowBorder"]

transform/pos = Vector2( -103.272, -51.6773 )
texture = ExtResource( 4 )

[node name="PSU" type="Polygon2D" parent="PortaitWindowBorder/Data"]

visibility/behind_parent = true
transform/pos = Vector2( -33.2172, -20.7468 )
polygon = Vector2Array( -33.3658, -25.4789, -33.3658, -16.343, 0.000198364, -16.1443, 0.000198364, -25.2803 )
uv = Vector2Array(  )
color = Color( 0.96875, 0.0189209, 0.775816, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 33.2172, 20.7468 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Name" type="Sprite" parent="PortaitWindowBorder/Data"]

transform/pos = Vector2( -17.3125, -20.7262 )
texture = ExtResource( 5 )

[node name="Pentium" type="Sprite" parent="PortaitWindowBorder"]

transform/pos = Vector2( -5.32504, -50.9971 )
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="PortaitWindowBorder/Pentium"]

transform/pos = Vector2( -17.3125, -20.97 )
texture = ExtResource( 7 )

[node name="PSU" type="Polygon2D" parent="PortaitWindowBorder/Pentium"]

visibility/behind_parent = true
transform/pos = Vector2( -33.3061, -20.8487 )
polygon = Vector2Array( -33.3658, -25.4789, -33.3658, -16.343, 0.000198364, -16.1443, 0.000198364, -25.2803 )
uv = Vector2Array(  )
color = Color( 0.96875, 0.0189209, 0.775816, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 32.8762, 20.9862 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Mobo" type="Sprite" parent="PortaitWindowBorder"]

transform/pos = Vector2( 90.5814, -51.6773 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="PortaitWindowBorder/Mobo"]

transform/pos = Vector2( -16.581, -21.2139 )
texture = ExtResource( 9 )

[node name="PSU" type="Polygon2D" parent="PortaitWindowBorder/Mobo"]

visibility/behind_parent = true
transform/pos = Vector2( -33.2892, -21.0681 )
polygon = Vector2Array( -33.3658, -25.4789, -33.3658, -16.343, 0.000198364, -16.1443, 0.000198364, -25.2803 )
uv = Vector2Array(  )
color = Color( 0.96875, 0.0189209, 0.775816, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 32.5967, 21.0752 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Sounds" type="Node" parent="."]

editor/display_folded = true

[node name="Dungeon" type="StreamPlayer" parent="Sounds"]

stream/stream = ExtResource( 10 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Battle" type="StreamPlayer" parent="Sounds"]

stream/stream = ExtResource( 11 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Win" type="StreamPlayer" parent="Sounds"]

stream/stream = ExtResource( 12 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="BattleDetails" type="Sprite" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 830.252, 649.18 )
transform/scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[node name="Background" type="Polygon2D" parent="BattleDetails"]

visibility/behind_parent = true
polygon = Vector2Array( -157.212, -88.6612, -157.965, 98.3927, 158.799, 97.0724, 157.919, -87.7809 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Output" type="Label" parent="BattleDetails"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -150.0
margin/top = -73.0
margin/right = 148.0
margin/bottom = 87.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
valign = 2
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TurnWindow" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 830.252, 649.18 )
transform/scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[node name="Background" type="Polygon2D" parent="TurnWindow"]

visibility/behind_parent = true
polygon = Vector2Array( -157.212, -88.6612, -157.965, 98.3927, 158.799, 97.0724, 157.919, -87.7809 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="OnTurn" type="Label" parent="TurnWindow"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -150.0
margin/top = -73.0
margin/right = 148.0
margin/bottom = -53.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mobo"
valign = 2
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Ability1" type="TextureButton" parent="TurnWindow"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -136.0
margin/top = -25.0
margin/right = -67.0
margin/bottom = 27.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 13 )
script/script = ExtResource( 14 )

[node name="selected" type="Polygon2D" parent="TurnWindow/Ability1"]

visibility/visible = false
visibility/behind_parent = true
polygon = Vector2Array( -4.52319, -6.56912, 72.691, -6.56912, 73.307, 54.769, -4.43146, 54.769 )
uv = Vector2Array(  )
color = Color( 0, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="abilityTitle" type="Label" parent="TurnWindow/Ability1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 56.0
margin/right = 44.0
margin/bottom = 70.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Strike.exe"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


